cmake_minimum_required(VERSION 3.0)

########## TYPES ##########

add_library(libonviftypes STATIC
include/onviftypes/onviftypes.hpp
src/aacdecoptions.cpp
src/absolutefocus.cpp
src/absolutefocusoptions.cpp
src/analytics/capabilities.cpp
src/analyticscapabilities.cpp
src/analyticsdevicecapabilities.cpp
src/analyticsengineconfiguration.cpp
src/arrayoffileprogress.cpp
src/attachmentdata.cpp
src/audiodecoderconfiguration.cpp
src/audiodecoderconfigurationoptions.cpp
src/audioencoderconfiguration.cpp
src/audioencoderconfigurationoption.cpp
src/audioencoderconfigurationoptions.cpp
src/audioencoding.cpp
src/audiooutputconfiguration.cpp
src/audiooutputconfigurationoptions.cpp
src/audiosource.cpp
src/audiosourceconfiguration.cpp
src/audiosourceconfigurationoptions.cpp
src/autofocusmode.cpp
src/backlightcompensation.cpp
src/backlightcompensation20.cpp
src/backlightcompensationmode.cpp
src/backlightcompensationoptions20.cpp
src/backupfile.cpp
src/binarydata.cpp
src/capabilities.cpp
src/capabilitycategory.cpp
src/certificate.cpp
src/certificateinformation.cpp
src/certificatestatus.cpp
src/certificateusage.cpp
src/certificatewithprivatekey.cpp
src/config.cpp
src/continuousfocus.cpp
src/continuousfocusoptions.cpp
src/date.cpp
src/datetime.cpp
src/datetimerange.cpp
src/datetimetype.cpp
src/defaultptzspeed.cpp
src/defogging.cpp
src/defoggingmode.cpp
src/defoggingoptions.cpp
src/device/deviceservicecapabilities.cpp
src/device/misccapabilities.cpp
src/device/networkcapabilities.cpp
src/device/securitycapabilities.cpp
src/device/service.cpp
src/device/storageconfiguration.cpp
src/device/storageconfigurationdata.cpp
src/device/systemcapabilities.cpp
src/devicecapabilities.cpp
src/deviceio/audiooutputconfiguration.cpp
src/deviceio/capabilities.cpp
src/deviceio/digitalinputconfigurationinputoptions.cpp
src/deviceio/paritybit.cpp
src/deviceio/paritybitlist.cpp
src/deviceio/relayoutputoptions.cpp
src/deviceio/serialdata.cpp
src/deviceio/serialport.cpp
src/deviceio/serialportconfiguration.cpp
src/deviceio/serialportconfigurationoptions.cpp
src/deviceio/serialporttype.cpp
src/deviceiocapabilities.cpp
src/digitalidlestate.cpp
src/digitalinput.cpp
src/discoverymode.cpp
src/displaycapabilities.cpp
src/dnsinformation.cpp
src/dot11authandmanagementsuite.cpp
src/dot11availablenetworks.cpp
src/dot11capabilities.cpp
src/dot11cipher.cpp
src/dot11configuration.cpp
src/dot11pskset.cpp
src/dot11securityconfiguration.cpp
src/dot11securitymode.cpp
src/dot11signalstrength.cpp
src/dot11stationmode.cpp
src/dot11status.cpp
src/dot1xconfiguration.cpp
src/dynamicdnsinformation.cpp
src/dynamicdnstype.cpp
src/duplex.cpp
src/duration.cpp
src/durationrange.cpp
src/eapmethodconfiguration.cpp
src/eflipmode.cpp
src/elementitemdescription.cpp
src/event/capabilities.cpp
src/eventcapabilities.cpp
src/eventsubscription.cpp
src/exposure.cpp
src/exposure20.cpp
src/exposuremode.cpp
src/exposureoptions20.cpp
src/exposurepriority.cpp
src/element.cpp
src/elementitem.cpp
src/factorydefaulttype.cpp
src/findeventresult.cpp
src/findeventresultlist.cpp
src/findrecordingresultlist.cpp
src/fileprogress.cpp
src/floatattrlist.cpp
src/floatlist.cpp
src/floatrange.cpp
src/focusconfiguration.cpp
src/focusconfiguration20.cpp
src/focusmove.cpp
src/focusoptions20.cpp
src/focusstatus20.cpp
src/g711decoptions.cpp
src/g726decoptions.cpp
src/h264configuration.cpp
src/h264options.cpp
src/h264options2.cpp
src/h264profile.cpp
src/hostnameinformation.cpp
src/imaging/capabilities.cpp
src/imagestabilization.cpp
src/imagestabilizationmode.cpp
src/imagestabilizationoptions.cpp
src/imagingcapabilities.cpp
src/imagingoptions20.cpp
src/imagingsettings.cpp
src/imagingsettings20.cpp
src/imagingstatus20.cpp
src/include.cpp
src/intattrlist.cpp
src/intlist.cpp
src/intrange.cpp
src/intrectangle.cpp
src/intrectanglerange.cpp
src/iocapabilities.cpp
src/ipaddress.cpp
src/ipaddressfilter.cpp
src/ipaddressfiltertype.cpp
src/iptype.cpp
src/ipv4configuration.cpp
src/ipv4networkinterface.cpp
src/ipv4networkinterfacesetconfiguration.cpp
src/ipv6networkinterfacesetconfiguration.cpp
src/ipv6configuration.cpp
src/ipv6dhcpconfiguration.cpp
src/ipv6networkinterface.cpp
src/ircutfilterautoadjustment.cpp
src/ircutfilterautoadjustmentoptions.cpp
src/ircutfilterautoboundarytype.cpp
src/ircutfiltermode.cpp
src/itemlist.cpp
src/itemlistdescription.cpp
src/jpegoptions.cpp
src/jpegoptions2.cpp
src/layout.cpp
src/media/capabilities.cpp
src/media/encodingtypes.cpp
src/media/videosourcemode.cpp
src/mediacapabilities.cpp
src/mediauri.cpp
src/messagedescription.cpp
src/metadatacompressiontype.cpp
src/metadataconfiguration.cpp
src/metadataconfigurationoptions.cpp
src/moveoptions20.cpp
src/movestatus.cpp
src/mpeg4configuration.cpp
src/mpeg4options.cpp
src/mpeg4options2.cpp
src/mpeg4profile.cpp
src/multicastconfiguration.cpp
src/networkcapabilities.cpp
src/networkgateway.cpp
src/networkhosttype.cpp
src/networkhost.cpp
src/networkinterface.cpp
src/networkinterfaceconnectionsetting.cpp
src/networkinterfacesetconfiguration.cpp
src/networkinterfaceinfo.cpp
src/networkinterfacelink.cpp
src/networkprotocol.cpp
src/networkprotocoltype.cpp
src/networkzeroconfiguration.cpp
src/noisereduction.cpp
src/noisereductionoptions.cpp
src/ntpinformation.cpp
src/onviftypes.cpp
src/onvifversion.cpp
src/panelayout.cpp
src/pantiltlimits.cpp
src/prefixedipv4address.cpp
src/prefixedipv6address.cpp
src/profile.cpp
src/profilecapabilities.cpp
src/ptz/capabilities.cpp
src/ptzcapabilities.cpp
src/ptzconfiguration.cpp
src/ptzconfigurationoptions.cpp
src/ptzcontroldirectionoptions.cpp
src/ptzfilter.cpp
src/ptznode.cpp
src/ptzpresettouroperation.cpp
src/ptzpresettoursupported.cpp
src/ptzspaces.cpp
src/ptzspeed.cpp
src/ptzstatusfilteroptions.cpp
src/realtimestreamingcapabilities.cpp
src/receiver/capabilities.cpp
src/receiver/receiver.cpp
src/receiver/receiverconfiguration.cpp
src/receiver/receivermode.cpp
src/receiver/receiverstate.cpp
src/receiver/receiverstateinformation.cpp
src/receivercapabilities.cpp
src/recording/capabilities.cpp
src/recording/encodingtypes.cpp
src/recording/getrecordingjobsresponseitem.cpp
src/recording/getrecordingsresponseitem.cpp
src/recording/gettracksresponseitem.cpp
src/recording/gettracksresponselist.cpp
src/recording/joboptions.cpp
src/recording/recordingconfiguration.cpp
src/recording/recordingjobconfiguration.cpp
src/recording/recordingjobmode.cpp
src/recording/recordingjobsource.cpp
src/recording/recordingjobstate.cpp
src/recording/recordingjobstateinformation.cpp
src/recording/recordingjobstatesource.cpp
src/recording/recordingjobstatetrack.cpp
src/recording/recordingjobstatetracks.cpp
src/recording/recordingjobtrack.cpp
src/recording/recordingoptions.cpp
src/recording/trackoptions.cpp
src/recordingcapabilities.cpp
src/recordinginformation.cpp
src/recordingsourceinformation.cpp
src/recordingstatus.cpp
src/recordingsummary.cpp
src/rectangle.cpp
src/relativefocus.cpp
src/relativefocusoptions20.cpp
src/relayidlestate.cpp
src/relaylogicalstate.cpp
src/relaymode.cpp
src/relayoutput.cpp
src/relayoutputsettings.cpp
src/remoteuser.cpp
src/replay/capabilities.cpp
src/replay/replayconfiguration.cpp
src/replaycapabilities.cpp
src/reversemode.cpp
src/rotate.cpp
src/rotatemode.cpp
src/rotateoptions.cpp
src/ruleengineconfiguration.cpp
src/scope.cpp
src/scopedefinition.cpp
src/search/capabilities.cpp
src/searchcapabilities.cpp
src/searchscope.cpp
src/searchstate.cpp
src/securitycapabilities.cpp
src/simpleitem.cpp
src/simpleitemdescription.cpp
src/sourcereference.cpp
src/space1ddescription.cpp
src/space2ddescription.cpp
src/storagereferencepath.cpp
src/streamingcapabilities.cpp
src/streamsetup.cpp
src/streamtype.cpp
src/stringattrlist.cpp
src/supportinformation.cpp
src/systemcapabilities.cpp
src/systemdatetime.cpp
src/systemlogtype.cpp
src/systemloguri.cpp
src/systemlog.cpp
src/systemlogurilist.cpp
src/time.cpp
src/timezone.cpp
src/tlsconfiguration.cpp
src/tonecompensation.cpp
src/tonecompensationmode.cpp
src/tonecompensationoptions.cpp
src/trackconfiguration.cpp
src/trackinformation.cpp
src/tracktype.cpp
src/transport.cpp
src/transportprotocol.cpp
src/user.cpp
src/usercredential.cpp
src/userlevel.cpp
src/vector1d.cpp
src/vector2d.cpp
src/videoanalyticsconfiguration.cpp
src/videoencoding.cpp
src/videoencoderconfiguration.cpp
src/videoencoderconfigurationoptions.cpp
src/videooutput.cpp
src/videooutputconfiguration.cpp
src/videooutputconfigurationoptions.cpp
src/videoratecontrol.cpp
src/videoresolution.cpp
src/videosource.cpp
src/videosourceconfiguration.cpp
src/videosourceconfigurationoptions.cpp
src/whitebalance.cpp
src/whitebalance20.cpp
src/whitebalancemode.cpp
src/whitebalanceoptions20.cpp
src/widedynamicmode.cpp
src/widedynamicrange.cpp
src/widedynamicrange20.cpp
src/widedynamicrangeoptions20.cpp
src/ws/datetime.cpp
src/ws/device.cpp
src/ws/digitalinput.cpp
src/ws/endpointreferencetype.cpp
src/ws/filtertype.cpp
src/ws/messagecontent.cpp
src/ws/topicexpression.cpp
src/ws/topicset.cpp
src/ws/trigger.cpp
src/zoomlimits.cpp)

add_sanitizers(libonviftypes)

if(WIN32)
  target_compile_definitions(libonviftypes PUBLIC WINVER=0x0601 _WIN32_WINNT=0x0601)
  set_target_properties(libonviftypes PROPERTIES LINK_FLAGS "/INCREMENTAL:NO /DEBUG:FASTLINK")
  set_property(TARGET libonviftypes APPEND PROPERTY LINK_FLAGS_RELEASE /LTCG)
endif()

set_property(TARGET libonviftypes PROPERTY CXX_STANDARD 17)

set_target_properties(libonviftypes PROPERTIES PREFIX "")
set_target_properties(libonviftypes PROPERTIES DEBUG_POSTFIX "")
set_target_properties(libonviftypes PROPERTIES RELEASE_POSTFIX "")

##### INCLUDES #####

include_directories(libonviftypes ${Boost_INCLUDE_DIRS})
include_directories(libonviftypes ${OPENSSL_INCLUDE_DIR})
include_directories(libonviftypes ${PROJECT_BINARY_DIR}/curl/include/curl)
include_directories(libonviftypes ${PROJECT_BINARY_DIR}/zlib)
include_directories(libonviftypes ../curl/include)
include_directories(libonviftypes ../pugixml/src)
include_directories(libonviftypes ../libutility/include)
include_directories(libonviftypes ../zlib)
include_directories(libonviftypes include)

##### LIBRARIES #####

target_link_libraries(libonviftypes libcurl)
target_link_libraries(libonviftypes libutility)
target_link_libraries(libonviftypes zlibstatic)
